--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@nanostores/react": "^0.7.1",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.3.2",
+    "nanostores": "^0.9.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1"
   }
 }
